Fixed blurry images on retina devices
* Removed mixin and explicitly define background position
* Clean up some padding

--- a/src/styles/components/_home.scss
+++ b/src/styles/components/_home.scss
@@ -33,6 +33,11 @@
       margin-top: 0;
       text-transform: uppercase;
     }
+
+    @media (max-width: $screen-md-max) {
+      padding: 1px 0 60px 0;
+    }
+    
   }
 
   section.proof-works {
